env/code_53f2236033e64/stderr.txt
  File "main.py", line 10
    if(a in str(num):
                    ^
SyntaxError: invalid syntax
